syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.lyndon.sharkdb.helloworld.proto";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc SayHelloAgain (HelloRequest) returns (HelloReply) {}
  rpc SayListMessage(HelloRequest) returns (stream StudentResponse) {}
  rpc SayHelloList (stream HelloRequest) returns (StudentResponseList) {}
  rpc BiTalk(stream StreamRequest) returns (stream StreamRequest) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

message StudentResponse {
  string name = 1;
  int32 age = 2;
  string city = 3;
}

message StudentResponseList {
  repeated StudentResponse studentResponse = 1;
}

message StreamRequest{
  string requestInfo = 1;
}

message StreamResponse{
  string responseInfo = 1;
}